--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="cat_2Fe_icon.ico">
+  <meta name="description" content="This is a website dedicated to my resume. Enjoy!">
+  <meta name="author" content="862229738">
 
-  <title>John Doe - Business Administration</title>
+  <title>Sarah Yae - Business Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Sarah Yae</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/SarahYae.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Sarah Yae
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">My name is Sarah Yae and I am a 20 year old Korean American who grew up in Irvine, California. My family immigrated to the states when I was around 7 years old and I have attended great schools in California from the third grade including Canyon View Elementary School, Sierra Vista Middle School, and Northwood High School all located in the beautiful city of Irvine, California. I am currently attending the University of Riverside, California pursuing a major in business economics.<br><br>
 
-        Enter bio here<br><br>
+        During my last two years at the University of California, Riverside, I have taken a lot of different courses to figure out what I am passionate about, as well as have an interest and talent at. I have taken history classes, numerous English classes, religion classes, computer science classes, and even psychology classes to see if any subjects would catch my eye. Currently, I am interested in computer science, history, and philosophy and plan to take more courses regarding these subjects in my next years in the university.<br><br>
 
-        Enter bio here
+        My name is Sarah Seungyeon Yae and I am a 19 year old Northwood High School graduate attending the University of California, Riverside studying administrative studies. I am passionate about dancing, music, volunteering, and writing. I held a leadership position at the Northwood High School dance team as a fourth year member while also dancing at the Pacific Dance studio regularly. I also volunteered at Culverdale Elementary School with the Emerging Leaders program at America on Track for three years with upper elementary schoolers who have taught me patience and perspective. Additionally, I learned how to play the violin in my school orchestra for 7 years, eventually landing an opportunity to be a member of the Southern California Orchestra. I was also involved in Northwood High School's Marching Band and the Jazz Band for two semesters. I am passionate, proactive, organized, and thrilled for new opportunities to serve my community! am passionate about dancing, volunteering, spending time with my family, and writing. I held a leadership position at the Northwood HS dance team as a fourth year member while also dancing at dance studios regularly from the age of 4. Additionally, I volunteered at Culverdale Elementary School with the Emerging Leaders program at America on Track for three years with elementary schoolers who have taught me patience and perspective. I have also participated in many volunteer opportunities during my high school days, including being in a mentor mentee program in the Culverdale Elementary School for three years being a mentor to elementary school students from ages 7 all the way to 12 years old. It was certainly a rewarding Furthermore, I participated in my school orchestras since the fourth grade and fell in love with the violin which lead me to actively practice and embrace new opportunities like performing with the Southern California Orchestra. I am currently attending the University of California, Riverside working toward my Bachelor's degree in Administration Studies while exploring other subjects my university offers. I am passionate, proactive, organized, and thrilled for new opportunities to serve my community.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/sarahyae">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/sarahyae">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/sarahsyae">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:yaesarah1@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Hostess</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://thelobby.com">The Lobby</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Checked in guests at the front<br> 
+              • Handled reservations with guests<br>
+              • Experience with customers and general service<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Cashier and Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yogurtland.com">Yogurtland</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for weighing and cashing out customers<br>
+              • Opened and closed the store<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2019 - September 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Team Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://chipotle.com">Chipotle</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped prepare ingredients throughout the day<br>
+            • Served millions of customers with quality food<br>
+            • Created a friendly and welcoming enviornment for guests<br>
+            • Assisted with preping the kitchen<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2019 - September 2019</span>
           </div>
         </div>
 
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Business Economics</div>
+            <div>BA in Business Economics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Northwood High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div>GED</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2016 - 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Sierra Vista Middle School</h3>
+            <div class="subheading mb-3">Student</div>
+            <div>Middle School Education</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2014 - May 2016</span>
           </div>
         </div>
 
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image2.jpeg" width="500px"> 
+            <img src="img/image1.jpeg" width="500px"><br> 
+            <img src="img/p1.jpeg" width="500px">
+            <img src="img/p2.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Sarah Yae</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
